--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/** {
+  border: 1px solid gray;
+  margin: 0px;
+  padding: 0px;
+}*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,3 +18,25 @@ code {
     monospace;
 }
 
+.form-control {
+  border-radius: 0px !important;
+}
+
+div.col {
+  padding: 0px !important;
+}
+
+button.btn {
+  width: 100%;
+  border-radius: 0px;
+}
+
+.cards {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  overflow-Y: scroll;
+  height: 150px;
+  padding-left: 20px;
+  
+}
